# ChangeLog for x11-misc/xmountains
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xmountains/ChangeLog,v 1.21 2012/03/09 11:11:09 phajdan.jr Exp $

  09 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> xmountains-2.9.ebuild:
  x86 stable wrt bug #404895

  23 Feb 2012; Brent Baude <ranger@gentoo.org> xmountains-2.9.ebuild:
  Marking xmountains-2.9 ppc for bug 404895

  23 Feb 2012; Agostino Sarubbo <ago@gentoo.org> xmountains-2.9.ebuild:
  Stable for amd64, wrt bug #404895

*xmountains-2.9 (04 Dec 2011)

  04 Dec 2011; Jeroen Roovers <jer@gentoo.org> +xmountains-2.9.ebuild:
  Version bump.

*xmountains-2.8 (15 Mar 2010)

  15 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xmountains-2.8.ebuild:
  Version bump wrt #309471 by "hitachi".

  23 Mar 2008; Santiago M. Mola <coldwind@gentoo.org> xmountains-2.7.ebuild:
  amd64 stable

  02 Aug 2007; Roy Marples <uberlord@gentoo.org> xmountains-2.7.ebuild:
  Keyworded ~x86-fbsd, #156902 thanks to Marc Kowarsky.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  22 Oct 2006; David Shakaryan <omp@gentoo.org> xmountains-2.7.ebuild:
  Remove monolithic X from dependencies.

  11 Oct 2006; Krzysiek Pawlik <nelchael@gentoo.org> xmountains-2.7.ebuild:
  Add missing x11-misc/xbitmaps to DEPEND, see bug #150790.

  21 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> -xmountains-2.6.ebuild,
  xmountains-2.7.ebuild:
  Fixed DEPEND for modular X.

  02 Jan 2005; Michael Hanselmann <hansmi@gentoo.org> xmountains-2.7.ebuild:
  Stable on ppc.

  29 Sep 2004; <pyrania@gentoo.org> xmountains-2.7.ebuild:
  Stable on x86.

  27 Sep 2004; Michael Sterrett <mr_bones_@gentoo.org> xmountains-2.7.ebuild:
  fix HOMEPAGE; use emake; install into /usr/bin; use newman

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  xmountains-2.6.ebuild, xmountains-2.7.ebuild:
  Masked xmountains-2.7.ebuild testing for ppc
