@@ -1,18 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST xmountains_2.7.tar.gz 27616 RMD160 b11828bff1074b45c69162eb120dc9cc3e00dad8 SHA1 707f5d5eb566b8163b1a175fc0aa42ce9ddeb98b SHA256 acd280b909e043004f8cfbec3be36ad127674ee7e99c25089c876c2278f80966
-DIST xmountains_2.8.tar.gz 27985 RMD160 75600f68d5139c6312b083010f3873b9d055e41d SHA1 e8e81fbee5a7563d01eb6dda262d9b3b895bd93f SHA256 2c9e49ea6802dcb6c8b47415d3a454363218baa6c0636ccc25c996222c138725
-DIST xmountains_2.9.tar.gz 27951 RMD160 c53a75faf98622327db2a78b6ec1a3d4d0eae4a4 SHA1 4a08688abeb0ffa9bf0c9381da832d29be193225 SHA256 3830f48ab46d770f0ce1c5e8fd1861e28fa1b8373aa82fac66a563f017aaee89
-EBUILD xmountains-2.7.ebuild 842 RMD160 0bc8a8e4e9807335c631a86b5abd82360588e3c5 SHA1 dc816144dcda005048663ec4761542d3740d6352 SHA256 9928051bab015f2347835b14097f17435e0db75f63b32426999c99b39a28e72d
-EBUILD xmountains-2.8.ebuild 836 RMD160 cdda4af06b4b68a54fbafcffc4753c789e3fae12 SHA1 d98073fc3810f663c13d087965e2a37d19f29d65 SHA256 82bb478026e4be7ef048be64ac5adbfdf4323abdd0fe63ae6c396cbff106a1d2
-EBUILD xmountains-2.9.ebuild 1040 RMD160 1499d0232496813c8892dac3d08aad403b3a0fd9 SHA1 19616403ce0abf0916c7d871b7a089e5e19b04ed SHA256 92f4be5f0dda25ca5c143aab776eeec00f46d8b3f1aead31680932920eaa9623
-MISC ChangeLog 2741 RMD160 6f14770b87bd269ce42f2336215aec82a78c9d95 SHA1 0d883e544b4900b2cbfb933a6140cc3c0f0abf15 SHA256 7491b2b693710ea8c0e39292eea6c2b7a39fef089f2354d1c35fc1efb097322f
-MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
+DIST xmountains_2.7.tar.gz 27616 SHA256 acd280b909e043004f8cfbec3be36ad127674ee7e99c25089c876c2278f80966
+DIST xmountains_2.8.tar.gz 27985 SHA256 2c9e49ea6802dcb6c8b47415d3a454363218baa6c0636ccc25c996222c138725
+DIST xmountains_2.9.tar.gz 27951 SHA256 3830f48ab46d770f0ce1c5e8fd1861e28fa1b8373aa82fac66a563f017aaee89
+EBUILD xmountains-2.7.ebuild 836 SHA256 a229d48d92da49840f2d57626a7a3f63841770f703ab60db0fcc448c2a5b18fb SHA512 dd04dd2091659ddc353042e93cb8c8055c604682b6e25d0a1640f2b9c6095a3fb045e8def58e0a122b85aea410211f2816e97bc7825037dce75ff1b18d28863c WHIRLPOOL 3d72068d142d62f5cf223a917c55897bbea36a0763e3fc70aa2bc8200e8ff2a27a6b33a554fbe213b32c67d20e571b68c5a8e1d926fc60e3bc933f88aba9c226
+EBUILD xmountains-2.8.ebuild 829 SHA256 196b59571cdd6f474406883cce07fa7b14f83f54e6e5badf1cdee888b41f5fc0 SHA512 947d45ebcfa0f832aee82b95953d1d038c56c48c5587b3756f9616d7a373a5a217ac06069010721a1adadb4150886574e88569147ab5a54f1e9b7926460de40a WHIRLPOOL d7b052d405c3c5480ae7b5f7f11fa2c6aec2ec968fa7eabed39d395fd8e7edceddb853f2515a63fc4ff54c792ffbce3ae959a060d76a50a879c5fd8355b8ae27
+EBUILD xmountains-2.9.ebuild 1032 SHA256 538b40a1b04df73c44ced0b5f1881c34ed038540afeae8544a1bc2ee2f71de6a SHA512 d3dd8a8138d020cf3fe6dff9f8bbe5427afdc6e92fb14f1eda40c20f0b23cd287589984e81c29a914bd4e18c97fff471cf02a69912add6bb5e7d431182fc51c5 WHIRLPOOL 56a4b7177fa1d4e3191f4d63796cf88a53cc79ed67da220d5f2b95fa3db32b23dfb35674a915347665da964802ecfd2d3733b885ac57dad2c6ce589d0a4dd545
+MISC ChangeLog 2927 SHA256 e264557f361e5621be31fe0877005308a102fa075e78f414ec2aca88c838bdc7 SHA512 d8f43590fb92a5059877cf73285dbd1a42960b963eb3543c094b86a510d8d9949e736939287c41bb57dc1f877fb2910f847a5d1da33b6af212f64c2006aa2800 WHIRLPOOL e7e46ade0081819c21dc34516e2b46709900f0eeb45daf611d577fd66df5606d872ef00b73d3052d95e31bdd70fd0e4da96b6dc196458f63264c28c07ad3e9d7
+MISC metadata.xml 166 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826 SHA512 23980b683f9a89f988407b1dcc27a4465a18912f6e6cf8e1fed46182f00c4023d4802434f36b9482121ba9ffe9bc5d6e91b5d3a4ba9067fcfd8e57799c128fe3 WHIRLPOOL 96d79ff499e108ad89b80507c2e94a09af1e8031e5e2a7f9cecb2dddbf517872361436bdb983dc580660064a62663ad63aa1fad8f49dd3758253f4e378bfd297
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAk9Z5VMACgkQuUQtlDBCeQJbHQCeJrJnq/p5nOlVPrD/8YPHQCqe
-bVwAnA1hqIW6agbp6QZ8v1wezuVB2Dm5
-=KOHf
+iQIcBAEBCAAGBQJQp2X3AAoJEDxpGckxwJCBimoP/iBcvxWULcJ1Xpw2XwngwkYc
+Lf7y0sYmGox8peSGU6obewpKq5yt21InAYl2WvcDcywuLH3HgyquBjatKEEBh44w
+i5bmSG3SQPi/kAtMZ7C0Qhtl25gcJk1fWvN0LuxPmoPIb9nhXIVipkbVtzqXuZCW
+B0l50bQeEkBBpCcotveW1TltsHlE5FB3eOqPEgSeAd9ZuWJdXTQnBJYplwxUiTM8
+5XozdIxFvPdHVoh91HbXn71TqAf/RCL3mXME9J6nSa9QxWbWkqGrWEQ+NDfFMxfK
+kH3wWF6BaLq7IMhlOnlwSFa4kCS5PIq1Du4ue6hkzW02lIH3C1rxguK3uJSSoJpq
+wuhutjruHNGjANu12IEvCJRttHCpGV02kikdJ7gBrmAbheqJ/ibFUquT/zps9u/w
+PVmSDVSp3FvNK9n7k39hnBRiBiHdTxI/vi+FFsnSYYRzwQMFo08Wxqsmj1zY9Iw3
+RZLEnJCoTxXB3+5D7PifHrZVRNugMkcGVy5Nwgl+hRIpf/Ib4KkSDaQc1Jbpv9Wl
+g0JOrK/IHh/Qi84ssG+Yt7MhsQK+zybp9nIE5FWgIvRSu0CRY0fGnZ+RPVjWyp5m
+80aRReE9pPHEXInAgL6I5D9NEDufScRYaRiGyR9hYaoCj1ru6nvJ1YGB88d5iFnh
+KBS3ljgmxEAyYMUQ8bSg
+=moy7
 -----END PGP SIGNATURE-----
