@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xmountains/xmountains-2.7.ebuild,v 1.12 2008/03/23 15:49:40 coldwind Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xmountains/xmountains-2.7.ebuild,v 1.13 2012/11/17 10:23:59 ulm Exp $
 
 MY_P=${P/-/_}
 
@@ -8,7 +8,7 @@ DESCRIPTION="Fractal terrains of snow-capped mountains near water"
 HOMEPAGE="http://www.epcc.ed.ac.uk/~spb/xmountains/"
 SRC_URI="http://www.epcc.ed.ac.uk/~spb/${PN}/${MY_P}.tar.gz"
 
-LICENSE="as-is"
+LICENSE="HPND"
 SLOT="0"
 KEYWORDS="amd64 ppc x86 ~x86-fbsd"
 IUSE=""
