@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xmountains/xmountains-2.8.ebuild,v 1.1 2010/03/15 10:23:47 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xmountains/xmountains-2.8.ebuild,v 1.2 2012/11/17 10:23:59 ulm Exp $
 
 EAPI=2
 inherit toolchain-funcs
@@ -11,7 +11,7 @@ DESCRIPTION="Fractal terrains of snow-capped mountains near water"
 HOMEPAGE="http://www.epcc.ed.ac.uk/~spb/xmountains/"
 SRC_URI="http://www.epcc.ed.ac.uk/~spb/${PN}/${MY_P}.tar.gz"
 
-LICENSE="as-is"
+LICENSE="HPND"
 SLOT="0"
 KEYWORDS="~amd64 ~ppc ~x86 ~x86-fbsd"
 IUSE=""
